[tool.poetry]
name = "isamples_gui"
version = "0.1.0"
description = ""
authors = ["Danny Mandel <danny.mandel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
py2app = "^0.28.2"
wxPython = "^4.1.0"
isamples_inabox = { path = "isamples_inabox", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
